--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
     <head>
-        <title>tamo activo papi</title>
+        <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
@@ -33,4 +33,5 @@ and open the template in the editor.
     </body>
 
 </html>
+
 
